internet-gateway.tf
resource "aws_internet_gateway" "eks" {
  vpc_id = aws_vpc.eks.id

  tags = {
    Name = "grayson-eks"
  }
}
