vpc.tf
resource "aws_vpc" "eks" {
    cidr_block = "10.100.0.0/16"
    instance_tenancy = "default"

    enable_dns_hostnames = true
    enable_dns_support = true

    tags = {
        Name = "grayson-eks"
    }
}
